--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
-    "axios": "^1.1.3",
+    "axios": "^1.3.5",
     "chart.js": "^3.9.1",
     "luxon": "^3.1.0",
+    "pinia": "^2.0.35",
     "vite": "^3.1.8",
     "vue": "^3.2.41",
     "vue-multiselect": "^3.0.0-alpha.2",
